--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,105 @@
-# History files
-.Rhistory
-.Rapp.history
+########################################################################
+#
+# .gitignore DIME template
+# https://github.com/worldbank/DIMEwiki/tree/master/Topics/GitHub
+#
+# We recommend that you create a .gitignore file using GitHub's tools and
+# replace the content of that file with the content of this file. Otherwise
+# you have to rename this file .gitignore. But if you rename the fine in a
+# regular folder window PCs and Macs are likely to keep the file extension
+# so that the file ends up being names .gitignore.txt. Code editors like, Atom,
+# can edit the file extension, but if you are not familiar with how to do that,
+# we recommend that you generate an ignore file using GitHub and simply replace
+# the content of that file.
+#
+# Note that if you are using GitKraken you need to use version 5.x or more
+# recent for this template to work properly
+#
+########################################################################
 
-# Session Data files
-.RData
+#######################
+# Start by ignoring everything, and below we are explicitly saying
+# what to not ignore
+*
 
-# User-specific files
-.Ruserdata
+#######################
+# List of files with GitHub functionality anywhere in the repo
+# that we do not want to ignore
 
-# Example code in package build process
-*-Ex.R
+# These files include GitHub settings
+!.gitignore
+!.gitattributes
 
-# Output files from R CMD build
-/*.tar.gz
+# Keep markdown files used for documentation on GitHub
+!README.md
+!CONTRIBUTING.md
+!LICENSE.md
 
-# Output files from R CMD check
-/*.Rcheck/
+#######################
+# For performance reasons, if a folder is already ignored, then
+# GitHub does not check the content for that folder for matches
+# with additional rules. The line below includes folder in the
+# top folder (but not their content), so that anything matching
+# the rules below will still not be ignored.
+!*/
 
-# RStudio files
-.Rproj.user/
+#######################
+# The following file types are code that should always be
+# included no matter where in the repository folder they are
+# located unless you explicitly ignore that folder
 
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
+# Stata
+!/**/**/*.do
+!/**/**/*.ado
+!/**/**/*.sthlp
+!/**/**/*_adoprogram/*.toc
+!/**/**/*_adoprogram/*.pkg
 
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
+# R-scrips and Rmarkdown-scripts
+!/**/**/*.R
+!/**/**/*.Rmd
 
-# knitr and R markdown default cache directories
-*_cache/
-/cache/
+# HTML files
+!/**/**/*.html
 
-# Temporary files created by R markdown
-*.utf8.md
-*.knit.md
+
+# LaTeX
+!/**/**/*.tex
+
+# Python
+!/**/**/*.py
+!/**/**/*.ipynb
+
+# Matlab
+!/**/**/*.m
+
+# Markdown
+!/**/**/*.md
+
+# xlsx files
+!/Data/**/*.xlsx
+
+# csv files
+!/**/**/*.csv
+
+# png files
+!/02_programs/*.png
+
+# stata files
+!/R/**/*outputs/*.dta
+
+#Powerpoint files
+!/**/**/*.ppt
+!/**/**/*.pptx
+
+
+#######################
+# Include all the files with passwords or tokens here. All files named
+# password or passwords are with this template ignored no matter which
+# format you are using. Additionally, all content in any folder called
+# password or passwords are also ignored. NOTE that your project might be
+# using different names and then you must edit the lines below accordingly.
+password.*
+passwords.*
+password/
+passwords/
