--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -22,7 +22,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v1
       - name: Install packages
         run:
-          Rscript -e "install.packages(c('rtweet','tidyverse','ggthemes','gganimate','here','wbstats','Hmisc','ggthemes','scales','hrbrthemes'))"
+          Rscript -e "install.packages(c('devtools','rtweet','tidyverse','ggthemes','gganimate','here','wbstats','Hmisc','ggthemes','scales','hrbrthemes'))"
       - name: Install github packages
         run:
           Rscript -e "devtools::install_github("worldbank/wbgviz", subdir = "wbggeo")"
