--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -35,6 +35,8 @@ jobs:
           install.packages('devtools')
           install.packages('rtweet')
           install.packages('tidyverse')
+          devtools::install_github("worldbank/wbgviz", subdir = "wbgdata")
+          devtools::install_github("worldbank/wbgviz", subdir = "wbgcharts")
           devtools::install_github("worldbank/wbgviz", subdir = "wbggeo")
           devtools::install_github("worldbank/wbgviz", subdir = "wbgmaps")
           install.packages('ggthemes')
